# kafka-delta-ingest

./: Cargo.toml  README.md
.cargo/: config.toml
doc/: HACKING.adoc
src/: coercions.rs  dead_letters.rs  delta_helpers.rs  lib.rs  main.rs  metrics.rs  offsets.rs  parallel_processing.rs  repair.rs  serialization.rs  transforms.rs  writer.rs
tests/: buffer_flush_tests.rs  dead_letter_tests.rs  delta_partitions_tests.rs  emails_s3_tests.rs  offset_tests.rs  schema_update_tests.rs
tests/data/: transform_test_transform_array_flatten.json
tests/helpers/: mod.rs
